0.8.4
* We do not add mined txs to TransactionsRejected map (or at least try to)
* WebUI cosmetic here and there...
* Transaction and EC signing parts moved from the wallet app to the btc package

0.8.3
* Support for GOCOIN_WALLET_CONFIG env variable (enforces the wallet's config file)
* Added CFG.PayCommandName so you could e.g. make it .bat or .sh (the default is "pay_cmd.txt")
* The home tab shows time next to each unspent outputs
* Cosmetic here and there...

0.8.2
* "fetchbal" can work via tor now (set env variable TOR=localhost:9150)
* Any own tx can now be sent to only a single random peer (privacy feature)
* You can include another wallet inside a text wallet file (use "@filename")

0.8.1
* "fetchbalance" renamed "fetchbal" and now it works with coinbase txs properly
* New tool fetchtx to downlaod raw tx from blockexplorer.com
* Block subnet 129.132.230.0/24 (fixed for now)
* Allow to setup User-Agent reported by the version messsage (a privacy feature)
* Some minor changes in fetchbalance
* Disconnect & Ban peers that have not sent a single inv to us for 15 min since connecting

0.8.0
* Souce code of the client hugely restructured
* A new tool "fetchbalance" that can fetch the ballance from blockchain.info & blockexplorer.com

0.7.8
* Password chars are hidden when being input (if wallet does not build, delete "wallet/hidepass.go").

0.7.7
* "MakeTx" tab is precise now converting between Satoshi and BTC values

0.7.6
* "MakeTx" tab in WebUI (to pre-make the command for the wallet app)
* Droppig a peer (from TextUI or WebUI) bans its IP by the way
* Added "-useallinputs" switch to the wallet app

0.7.5
* Added CFG.MiningStatHours so minig stats are not fixed to 24 hours anymore

0.7.4
* A new port of sipa's secp256k1 lib, based on the 10x26 filed implemetnation (btc/newec)
* The new btc/newec speedup enabled by default.
* The old native speedup's source code removed.

0.7.3